--- a/app/views/employee-home.html
+++ b/app/views/employee-home.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 <form action="/employees">
-  <button class="govuk-button" id="view-employees-button">View all employees</button>
+  <button class="govuk-button" id="view-employees-button">Don't you dare view all the employees</button>
 </form>
 
 <form action="/insert-employee">
